# coolprop-wasm

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE  README.md  allowed_fluids.txt  build.sh  coolprop.cjs  docker-compose.yml  index.js  jest.config.js  package-lock.json  package.json  test.ts  tsconfig.json
.github/workflows/: publish.yml
bindings/: property_plot_utils.cpp  property_plot_utils.h  wrapper.cpp
bindings/plot/: PlotDataModule.cpp  PlotDataModule.h
tests/: api.test.js  benchmark_propssi.mjs  plotting.test.js  validation_cengel.mjs
